docs/envoy/v1.6.0/_sources/api-v2/api/v2/core/address.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/core/address.proto:

Network addresses
=================


.. _envoy_api_msg_core.Pipe:

core.Pipe
---------

`[core.Pipe proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L13>`_


.. code-block:: json

  {
    "path": "..."
  }

.. _envoy_api_field_core.Pipe.path:

path
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Unix Domain Socket path. On Linux, paths starting with '@' will use the
  abstract namespace. The starting '@' is replaced by a null byte by Envoy.
  Paths starting with '@' will result in an error in environments other than
  Linux.
  
  


.. _envoy_api_msg_core.SocketAddress:

core.SocketAddress
------------------

`[core.SocketAddress proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L21>`_


.. code-block:: json

  {
    "protocol": "...",
    "address": "...",
    "port_value": "...",
    "named_port": "...",
    "resolver_name": "...",
    "ipv4_compat": "..."
  }

.. _envoy_api_field_core.SocketAddress.protocol:

protocol
  (:ref:`core.SocketAddress.Protocol <envoy_api_enum_core.SocketAddress.Protocol>`) 
  
.. _envoy_api_field_core.SocketAddress.address:

address
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The address for this socket. :ref:`Listeners <config_listeners>` will bind
  to the address or outbound connections will be made. An empty address is
  not allowed, specify ``0.0.0.0`` or ``::`` to bind any. It's still possible to
  distinguish on an address via the prefix/suffix matching in
  FilterChainMatch after connection. For :ref:`clusters
  <config_cluster_manager_cluster>`, an address may be either an IP or
  hostname to be resolved via DNS. If it is a hostname, :ref:`resolver_name
  <envoy_api_field_core.SocketAddress.resolver_name>` should be set unless default
  (i.e. DNS) resolution is expected.
  
  
.. _envoy_api_field_core.SocketAddress.port_value:

port_value
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) 
  
  Precisely one of :ref:`port_value <envoy_api_field_core.SocketAddress.port_value>`, :ref:`named_port <envoy_api_field_core.SocketAddress.named_port>` must be set.
  
.. _envoy_api_field_core.SocketAddress.named_port:

named_port
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is only valid if :ref:`resolver_name
  <envoy_api_field_core.SocketAddress.resolver_name>` is specified below and the
  named resolver is capable of named port resolution.
  
  
  Precisely one of :ref:`port_value <envoy_api_field_core.SocketAddress.port_value>`, :ref:`named_port <envoy_api_field_core.SocketAddress.named_port>` must be set.
  
.. _envoy_api_field_core.SocketAddress.resolver_name:

resolver_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The name of the resolver. This must have been registered with Envoy. If this is
  empty, a context dependent default applies. If address is a hostname this
  should be set for resolution other than DNS. If the address is a concrete
  IP address, no resolution will occur.
  
  
.. _envoy_api_field_core.SocketAddress.ipv4_compat:

ipv4_compat
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When binding to an IPv6 address above, this enables `IPv4 compatibity
  <https://tools.ietf.org/html/rfc3493#page-11>`_. Binding to ``::`` will
  allow both IPv4 and IPv6 connections, with peer IPv4 addresses mapped into
  IPv6 space as ``::FFFF:<IPv4-address>``.
  
  

.. _envoy_api_enum_core.SocketAddress.Protocol:

Enum core.SocketAddress.Protocol
--------------------------------

`[core.SocketAddress.Protocol proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L22>`_


.. _envoy_api_enum_value_core.SocketAddress.Protocol.TCP:

TCP
  *(DEFAULT)* ⁣
  


.. _envoy_api_msg_core.BindConfig:

core.BindConfig
---------------

`[core.BindConfig proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L60>`_


.. code-block:: json

  {
    "source_address": "{...}"
  }

.. _envoy_api_field_core.BindConfig.source_address:

source_address
  (:ref:`core.SocketAddress <envoy_api_msg_core.SocketAddress>`, *REQUIRED*) The address to bind to when creating a socket.
  
  



.. _envoy_api_msg_core.Address:

core.Address
------------

`[core.Address proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L74>`_

Addresses specify either a logical or physical address and port, which are
used to tell Envoy where to bind/listen, connect to upstream and find
management servers.

.. code-block:: json

  {
    "socket_address": "{...}",
    "pipe": "{...}"
  }

.. _envoy_api_field_core.Address.socket_address:

socket_address
  (:ref:`core.SocketAddress <envoy_api_msg_core.SocketAddress>`) 
  
  Precisely one of :ref:`socket_address <envoy_api_field_core.Address.socket_address>`, :ref:`pipe <envoy_api_field_core.Address.pipe>` must be set.
  
.. _envoy_api_field_core.Address.pipe:

pipe
  (:ref:`core.Pipe <envoy_api_msg_core.Pipe>`) 
  
  Precisely one of :ref:`socket_address <envoy_api_field_core.Address.socket_address>`, :ref:`pipe <envoy_api_field_core.Address.pipe>` must be set.
  


.. _envoy_api_msg_core.CidrRange:

core.CidrRange
--------------

`[core.CidrRange proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/api/v2/core/address.proto#L85>`_

CidrRange specifies an IP Address and a prefix length to construct
the subnet mask for a `CIDR <https://tools.ietf.org/html/rfc4632>`_ range.

.. code-block:: json

  {
    "address_prefix": "...",
    "prefix_len": "{...}"
  }

.. _envoy_api_field_core.CidrRange.address_prefix:

address_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) IPv4 or IPv6 address, e.g. ``192.0.0.0`` or ``2001:db8::``.
  
  
.. _envoy_api_field_core.CidrRange.prefix_len:

prefix_len
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Length of prefix, e.g. 0, 32.
  
  

